Major cleanup in grids, forms and panels; includes a lot of styling tweaks and consolidation as well

--- a/site/resources/styles/core/core-values.less
+++ b/site/resources/styles/core/core-values.less
@@ -54,6 +54,8 @@
 @medium_border_color: darken(@standard_border_color, 10%);
 @accent_border_color: darken(@background_color, 5%);
 
+@code_border_color: @standard_border_color;
+
 @code_text_color: @text_color;
 @highlighted_text_color: green;
 @selected_text_color: @text_color;
