--- a/site/resources/styles/themes/alien.less
+++ b/site/resources/styles/themes/alien.less
@@ -34,5 +34,6 @@ http://www.earthli.com/software/webcore
 @title_color: #ff8d46;
 @link_color: #90be5a;
 @code_text_color: #a98ebd;
+@code_border_color: @code_text_color;
 @highlighted_text_color: #6ca7ff;
 @selected_text_color: #fffb8b;
