--- a/site/resources/styles/themes/fog.css
+++ b/site/resources/styles/themes/fog.css
@@ -72,6 +72,9 @@ body {
 code {
   color: #333333;
 }
+pre > code {
+  border-color: #b6b6b6;
+}
 a:link,
 a:visited {
   color: #0066cc;
@@ -159,8 +162,6 @@ h4 code {
 .nav-box,
 .top-box,
 .footer,
-.horizontal-separator,
-.vertical-separator,
 .left-sidebar,
 .right-sidebar,
 .info-box-top,
@@ -171,6 +172,7 @@ h4 code {
 .description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+hr,
 .abstract {
   border-color: #b6b6b6;
 }
@@ -185,7 +187,6 @@ div.info-box-top {
 .quote-block,
 .preview,
 .chart,
-pre > code,
 .basic-form-block,
 .pullquote {
   border-color: #e1e1e1;
