--- a/site/resources/styles/themes/hochzeit.css
+++ b/site/resources/styles/themes/hochzeit.css
@@ -78,6 +78,9 @@ body {
 code {
   color: #554433;
 }
+pre > code {
+  border-color: #cbc2b0;
+}
 a:link,
 a:visited {
   color: #5579c4;
@@ -169,8 +172,6 @@ h4 code {
 .nav-box,
 .top-box,
 .footer,
-.horizontal-separator,
-.vertical-separator,
 .left-sidebar,
 .right-sidebar,
 .info-box-top,
@@ -181,6 +182,7 @@ h4 code {
 .description-box,
 table.columns > tbody > tr > td,
 table.columns > tbody > tr > th,
+hr,
 .abstract {
   border-color: #cbc2b0;
 }
@@ -195,7 +197,6 @@ div.info-box-top {
 .quote-block,
 .preview,
 .chart,
-pre > code,
 .basic-form-block,
 .pullquote {
   border-color: #ac9175;
