Cleaned out a lot of fixes tr/td tags from the grids and lists

--- a/site/resources/styles/core/core.css
+++ b/site/resources/styles/core/core.css
@@ -377,7 +377,7 @@ pre > code {
 .info-box-top,
 .info-box-bottom,
 .subdued {
-  color: #dimmest_text_color;
+  color: #a3a3a3;
 }
 .info-box-top p,
 .info-box-bottom p,
