--- a/site/resources/styles/themes/hochzeit.css
+++ b/site/resources/styles/themes/hochzeit.css
@@ -255,7 +255,7 @@ div.info-box-top {
   background-repeat: repeat;
 }
 .highlight {
-  color: #c72c1b;
+  color: #449157;
 }
 .selected {
   color: #554433;
