--- a/site/resources/styles/themes/hochzeit.less
+++ b/site/resources/styles/themes/hochzeit.less
@@ -34,7 +34,7 @@ http://www.earthli.com/software/webcore
 @footer_background_color: @banner_background_color;
 @accent_border_color: lighten(@text_color, 30%);
 @link_color: #5579C4;
-@highlighted_text_color: #c72c1b;
+@highlighted_text_color: #449157;
 @selected_text_color: @title_color;
 @selected_control_text_color: @background_color;
 @control_text_color: @text_color;
